--- a/src/main/metadata-au/classes/TaskTriggerHandler.cls
+++ b/src/main/metadata-au/classes/TaskTriggerHandler.cls
@@ -77,6 +77,7 @@ public class TaskTriggerHandler
             TaskHelper.updateCommentWithTimeStamp(Trigger.new,trigger.isinsert,trigger.isupdate);
             TaskHelper.validateAccount(Trigger.new,trigger.isinsert,trigger.isupdate);
             TaskHelper.updateCompany(Trigger.new);
+			TaskHelper.UpdateOpenActivity(Trigger.new);
         }
         if(trigger.isBefore && trigger.isUpdate)
         {
@@ -92,6 +93,7 @@ public class TaskTriggerHandler
             TaskHelper.au_Before_Insert_Update_Events_Task(Trigger.new,trigger.isinsert,trigger.isupdate);
             TaskHelper.updateCommentWithTimeStamp(Trigger.new,trigger.isinsert,trigger.isupdate);
             TaskHelper.validateAccount(Trigger.new,trigger.isinsert,trigger.isupdate);
+			TaskHelper.UpdateOpenActivity(Trigger.new);
         }
     }
     
